<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:context=".ui.fragments.HomeFragment"
                android:layout_margin="10dp">

    <RelativeLayout
        android:id="@+id/head_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shadow_item">

    <TextView
        android:id="@+id/head_bemvindo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bem_vindo"
        android:layout_marginLeft="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/montserratmedium"/>

    <TextView
        android:id="@+id/home_dono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_bemvindo"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="invisible"
        android:fontFamily="@font/montserratregular"
        android:text="@string/home_descricaodono"
    />

    <TextView
        android:id="@+id/home_hotel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_bemvindo"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="invisible"
        android:fontFamily="@font/montserratregular"
        android:text="@string/home_descricaohotel"
    />

    <TextView
        android:id="@+id/home_freelancer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/head_bemvindo"
        android:layout_margin="20dp"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:visibility="invisible"
        android:fontFamily="@font/montserratregular"
        android:text="@string/home_descricaofreelancer"
    />
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/lista_dono_historico_servicos"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/head_layout"
        android:layout_marginTop="20dp"/>

</RelativeLayout>